--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Primary colors -->
-    <color name="primary-color">#8BC34A</color>
-    <color name="dark-primary-color">#689F38</color>
-    <color name="light-primary-color">#DCEDC8</color>
+    <color name="primaryColor">#8BC34A</color>
+    <color name="primaryColorDark">#689F38</color>
+    <color name="primaryColorLight">#DCEDC8</color>
 
     <!-- Accent colors -->
-    <color name="accent-color">#FF9800</color>
+    <color name="accentColor">#FF9800</color>
 
     <!-- Other colors -->
-    <color name="primary-text-color">#212121</color>
-    <color name="secondary-text-color">#727272</color>
-    <color name="divider-color">#B6B6B6</color>
+    <color name="textColorDark">#212121</color>
+    <color name="textColorGrey">#727272</color>
+    <color name="dividerColor">#B6B6B6</color>
 </resources>
