--- a/app/app/src/main/res/layout/row.xml
+++ b/app/app/src/main/res/layout/row.xml
@@ -3,4 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_value"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
