--- a/app/app/src/main/res/values/buses.xml
+++ b/app/app/src/main/res/values/buses.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string-array name="template">
         <item>dgw</item>
         <item>vin</item>
@@ -9,7 +8,7 @@
         <item>type</item>
     </string-array>
 
-    <string-array name="100020" >
+    <string-array name="b1" >
         <item>Ericsson$100020</item>
         <item>YV3U0V222FA100020</item>
         <item>EPO 131</item>
@@ -17,7 +16,7 @@
         <item>el</item>
     </string-array>
 
-    <string-array name="100021" >
+    <string-array name="b2" >
         <item>Ericsson$100021</item>
         <item>YV3U0V222FA100021</item>
         <item>EPO 136</item>
@@ -25,15 +24,15 @@
         <item>el</item>
     </string-array>
 
-    <string-array name="100022" >
+    <string-array name="b3" >
         <item>Ericsson$100022</item>
-        <item> YV3U0V222FA100022</item>
+        <item>YV3U0V222FA100022</item>
         <item>EPO 143</item>
         <item>001395143bf0</item>
         <item>el</item>
     </string-array>
 
-    <string-array name="171164" >
+    <string-array name="b4" >
         <item>Ericsson$171164</item>
         <item>YV3T1U22XF1171164</item>
         <item>EOG 604</item>
@@ -41,15 +40,15 @@
         <item>hybrid</item>
     </string-array>
 
-    <string-array name="171234" >
+    <string-array name="b5" >
         <item>Ericsson$171234</item>
-        <item> YV3T1U225F1171234</item>
+        <item>YV3T1U225F1171234</item>
         <item>EOG 606</item>
         <item>0013951349f7</item>
         <item>hybrid</item>
     </string-array>
 
-    <string-array name="171235" >
+    <string-array name="b6" >
         <item>Ericsson$171235</item>
         <item>YV3T1U227F1171235</item>
         <item>EOG 616</item>
@@ -57,7 +56,7 @@
         <item>hybrid</item>
     </string-array>
 
-    <string-array name="171327" >
+    <string-array name="b7" >
         <item>Ericsson$171327</item>
         <item>YV3T1U221F1171327</item>
         <item>EOG 622</item>
@@ -65,7 +64,7 @@
         <item>hybrid</item>
     </string-array>
 
-    <string-array name="171328" >
+    <string-array name="b8" >
         <item>Ericsson$171328</item>
         <item>YV3T1U223F1171328</item>
         <item>EOG 627</item>
@@ -73,19 +72,19 @@
         <item>hybrid</item>
     </string-array>
 
-    <string-array name="171329" >
+    <string-array name="b9" >
         <item>Ericsson$171329</item>
         <item>YV3T1U225F1171329</item>
         <item>EOG 631</item>
         <item>001395143bf2</item>
         <item>hybrid</item>
     </string-array>
-    
-    <string-array name="171330" >
+
+    <string-array name="b10" >
         <item>Ericsson$171330</item>
         <item>YV3T1U223F1171330</item>
         <item>EOG 634</item>
-        <item> 001395135f20</item>
+        <item>001395135f20</item>
         <item>hybrid</item>
     </string-array>
 
