Removed control and changed the layout

--- a/app/app/src/main/res/layout/main.xml
+++ b/app/app/src/main/res/layout/main.xml
@@ -4,24 +4,19 @@
     android:layout_height="match_parent"
     >
 
-    <TextView
+    <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textstatus"
-        android:text="@string/hello_world"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:id="@+id/list"
         />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world"
+        android:text="@string/scan"
         android:id="@+id/buttonScan"
-        />
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:id="@+id/list"
+        android:layout_weight="0"
         />
 
 </LinearLayout>
