--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Primary colors -->
-    <color name="primaryColor">#8BC34A</color>
-    <color name="primaryColorDark">#689F38</color>
-    <color name="primaryColorLight">#DCEDC8</color>
+    <color name="primary_color">#8BC34A</color>
+    <color name="primary_color_dark">#689F38</color>
+    <color name="primary_color_light">#DCEDC8</color>
 
     <!-- Accent colors -->
-    <color name="accentColor">#FF9800</color>
+    <color name="accent_color">#FF9800</color>
 
     <!-- Other colors -->
-    <color name="textColorDark">#212121</color>
-    <color name="textColorGrey">#727272</color>
-    <color name="dividerColor">#B6B6B6</color>
+    <color name="text_color_black">#212121</color>
+    <color name="text_color_grey">#727272</color>
+    <color name="divider_color">#B6B6B6</color>
 </resources>
