--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <!-- Other colors -->
     <color name="text_color_black">#212121</color>
     <color name="text_color_grey">#727272</color>
+    <color name="text_color_white">#FFFFFF</color>
     <color name="divider_color">#B6B6B6</color>
 </resources>
