--- a/app/src/main/res/layout/activity_travel.xml
+++ b/app/src/main/res/layout/activity_travel.xml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/current_bus_stop"
-        android:id="@+id/textView"
-        android:clickable="false"
-        />
-
-    <Spinner
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_gravity="center_horizontal"
-        android:spinnerMode="dropdown"/>
+        android:background="@color/material_grey_300"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="16dp"
+            android:clickable="false"
+            android:singleLine="false"
+            android:text="@string/current_bus_stop"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/text_color_black"/>
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:clickable="false"
+            />
+    </LinearLayout>
+
 
     <ListView
+        android:id="@+id/departuresListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/departuresListView" />
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
