--- a/app/src/main/res/layout/activity_hamburger.xml
+++ b/app/src/main/res/layout/activity_hamburger.xml
@@ -2,7 +2,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="se.elbus.oaakee.Hamburger">
+    tools:context="se.elbus.oaakee.MainActivity">
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
@@ -18,7 +18,7 @@
          the container. -->
     <fragment android:id="@+id/navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
-        android:layout_gravity="start" android:name="se.elbus.oaakee.NavigationDrawerFragment"
+        android:layout_gravity="start" android:name="se.elbus.oaakee.HamburgerFragment"
         tools:layout="@layout/fragment_hamburger" />
 
 </android.support.v4.widget.DrawerLayout>
