--- a/app/src/main/res/layout/fragment_hamburger.xml
+++ b/app/src/main/res/layout/fragment_hamburger.xml
@@ -6,4 +6,4 @@
           android:choiceMode="singleChoice"
           android:divider="@android:color/transparent"
           android:dividerHeight="0dp"
-          tools:context="se.elbus.oaakee.HamburgerFragment"/>
+          tools:context="se.elbus.oaakee.Fragments.HamburgerFragment"/>
