--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -13,7 +13,7 @@
             android:id="@+id/infoArrivesIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/circleHolder"
+            android:layout_above="@+id/infoCircleHolder"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
@@ -21,7 +21,7 @@
             android:textSize="24sp"/>
 
         <View
-            android:id="@+id/circleHolder"
+            android:id="@+id/infoCircleHolder"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_centerHorizontal="true"
@@ -51,6 +51,44 @@
                 android:textColor="@color/text_color_grey"
                 android:textSize="20sp"/>
         </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/info_bus_name"
+            android:id="@+id/infoBusName"
+            android:layout_above="@+id/infoArrivesIn"
+            android:layout_centerHorizontal="true"
+            android:textSize="40sp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Vald resa"
+                android:id="@+id/info_chosen_trip"
+                android:textColor="@color/text_color_grey"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Chalmers - Lindholmen"
+                android:id="@+id/info_from_to"
+                android:textColor="@color/text_color_black"/>
+
+        </LinearLayout>
+
+
 
 
     </RelativeLayout>
