--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_centerVertical="true"
-    android:layout_height="fill_parent"
+    android:layout_height="match_parent"
     android:useDefaultMargins="false"
     android:rowOrderPreserved="false"
     android:nestedScrollingEnabled="false"
@@ -15,7 +15,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/chargeText"
         android:text="@string/your_ticket"
@@ -24,21 +24,23 @@
         android:singleLine="true"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:layout_gravity="center_horizontal"
         android:layout_columnWeight="0"
-        android:layout_rowWeight="1"
+        android:layout_rowWeight="0"
         android:textColor="@android:color/black"
         android:fontFamily="@string/font"
         android:textAllCaps="true"
         android:editable="false"
-        android:inputType="none" />
+        android:inputType="none"
+        android:gravity="center"
+        android:minHeight="180sp"
+        android:textSize="15sp" />
 
     <ProgressBar
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/countdown_progressbar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:indeterminate="false"
         android:max="1000"
         android:progress="999"
@@ -48,51 +50,55 @@
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_columnWeight="0"
-        android:layout_rowWeight="0" />
+        android:layout_rowWeight="0"
+        android:minHeight="700sp"
+        android:minWidth="700sp"
+        android:layout_gravity="center"
+        android:mirrorForRtl="false"
+        android:nestedScrollingEnabled="true" />
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_rowSpan="3"
-        android:gravity="center_vertical|center_horizontal"
         android:layout_columnWeight="0"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:layout_rowWeight="0">
+        android:orientation="horizontal"
+        android:columnCount="1"
+        android:rowCount="3"
+        android:rowOrderPreserved="false"
+        android:useDefaultMargins="false"
+        android:layout_rowWeight="0"
+        android:gravity="center"
+        android:layout_gravity="center">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/timeleft"
             android:textSize="90sp"
-            android:text="19"
+            android:text="15"
             android:fontFamily="@string/font"
-            android:textColor="@android:color/black"
-            android:singleLine="true"
-            android:capitalize="none"
-            android:autoText="false"
-            android:textAllCaps="true"
-            android:editable="false"
-            android:inputType="none" />
+            android:textColor="@android:color/black" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:text="@string/minutes"
+            android:text="min"
             android:fontFamily="@string/font"
             android:textColor="@android:color/black"
-            android:singleLine="true"
-            android:capitalize="none"
-            android:autoText="false"
-            android:textAllCaps="false"
-            android:editable="false"
-            android:inputType="none" />
-
+            android:textSize="30sp"
+            android:password="false"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:paddingBottom="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_columnSpan="1"
@@ -100,7 +106,8 @@
         android:layout_row="2"
         android:layout_rowSpan="1"
         android:layout_rowWeight="0"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:gravity="left">
 
         <TextView
             android:layout_width="wrap_content"
@@ -117,7 +124,8 @@
             android:autoText="false"
             android:textAllCaps="true"
             android:editable="false"
-            android:inputType="none" />
+            android:inputType="none"
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -133,13 +141,14 @@
             android:textAlignment="gravity"
             android:autoText="false"
             android:textAllCaps="true"
-            android:editable="false" />
+            android:editable="false"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_column="2"
         android:layout_columnSpan="1"
@@ -147,7 +156,8 @@
         android:layout_row="2"
         android:layout_rowSpan="1"
         android:layout_rowWeight="0"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:gravity="right">
 
         <TextView
             android:layout_width="wrap_content"
@@ -162,7 +172,8 @@
             android:capitalize="characters"
             android:textAlignment="gravity"
             android:editable="false"
-            android:textAllCaps="true" />
+            android:textAllCaps="true"
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -177,7 +188,8 @@
             android:capitalize="characters"
             android:textAlignment="gravity"
             android:editable="false"
-            android:textAllCaps="true" />
+            android:textAllCaps="true"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
