Changed layout of paymentscreen

--- a/app/src/main/res/drawable/countdown_ring.xml
+++ b/app/src/main/res/drawable/countdown_ring.xml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@android:id/progress">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/secondaryProgress">
         <shape
-            android:innerRadiusRatio="2.62"
+            android:innerRadiusRatio="2.63"
             android:shape="ring"
-            android:thicknessRatio="216"
-            android:useLevel="true">
+            android:thicknessRatio="216">
             <gradient
-                android:startColor="#000000"
-                android:endColor="#000000"
-                android:centerColor="#000000"
-                android:type="sweep"/>
+                android:centerColor="#E2E2E2"
+                android:endColor="#E2E2E2"
+                android:startColor="#E2E2E2"
+                android:type="sweep" />
         </shape>
+    </item>
+    <item android:id="@android:id/progress">
+        <rotate
+            android:fromDegrees="270"
+            android:pivotX="50%"
+            android:pivotY="50%"
+            android:toDegrees="270">
+            <shape
+                android:innerRadiusRatio="2.63"
+                android:shape="ring"
+                android:thicknessRatio="216">
+                <rotate
+                    android:fromDegrees="0"
+                    android:pivotX="50%"
+                    android:pivotY="50%"
+                    android:toDegrees="360" />
+                <gradient
+                    android:centerColor="#909087"
+                    android:endColor="#909087"
+                    android:startColor="#909087"
+                    android:type="sweep" />
+            </shape>
+        </rotate>
     </item>
 </layer-list>
