--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -21,7 +21,7 @@
         android:text="@string/your_ticket"
         android:layout_row="0"
         android:layout_rowSpan="1"
-        android:singleLine="true"
+        android:singleLine="false"
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_columnWeight="0"
@@ -33,7 +33,7 @@
         android:inputType="none"
         android:gravity="center"
         android:minHeight="180sp"
-        android:textSize="15sp" />
+        android:textSize="23sp" />
 
     <ProgressBar
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -42,8 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="false"
-        android:max="1000"
-        android:progress="999"
+        android:max="101"
+        android:progress="82"
+        android:secondaryProgress="100"
         android:progressDrawable="@drawable/countdown_ring"
         android:layout_row="0"
         android:layout_rowSpan="3"
@@ -53,9 +54,7 @@
         android:layout_rowWeight="0"
         android:minHeight="700sp"
         android:minWidth="700sp"
-        android:layout_gravity="center"
-        android:mirrorForRtl="false"
-        android:nestedScrollingEnabled="true" />
+        android:layout_gravity="center" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -79,7 +78,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/timeleft"
             android:textSize="90sp"
-            android:text="15"
+            android:text="19"
             android:fontFamily="@string/font"
             android:textColor="@android:color/black" />
 
@@ -116,7 +115,7 @@
             android:layout_rowWeight="0"
             android:layout_columnWeight="0"
             android:layout_gravity="left"
-            android:singleLine="true"
+            android:singleLine="false"
             android:textColor="@android:color/black"
             android:fontFamily="@string/font"
             android:capitalize="none"
@@ -125,12 +124,12 @@
             android:textAllCaps="true"
             android:editable="false"
             android:inputType="none"
-            android:textSize="15sp" />
+            android:textSize="13sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:text="0 kr"
+            android:text="125 kr"
             android:layout_rowWeight="0"
             android:layout_columnWeight="0"
             android:layout_gravity="left"
@@ -142,7 +141,7 @@
             android:autoText="false"
             android:textAllCaps="true"
             android:editable="false"
-            android:textSize="15sp" />
+            android:textSize="23sp" />
 
     </LinearLayout>
 
@@ -166,14 +165,14 @@
             android:layout_rowWeight="0"
             android:layout_columnWeight="0"
             android:layout_gravity="right"
-            android:singleLine="true"
+            android:singleLine="false"
             android:textColor="@android:color/black"
             android:fontFamily="@string/font"
             android:capitalize="characters"
             android:textAlignment="gravity"
             android:editable="false"
             android:textAllCaps="true"
-            android:textSize="15sp" />
+            android:textSize="13sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -189,7 +188,7 @@
             android:textAlignment="gravity"
             android:editable="false"
             android:textAllCaps="true"
-            android:textSize="15sp" />
+            android:textSize="23sp" />
 
     </LinearLayout>
 
