--- a/app/src/main/res/layout/busline_row.xml
+++ b/app/src/main/res/layout/busline_row.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/busNumberTextView"
         android:layout_width="91dp"
-        android:layout_height="100dp"
+        android:layout_height="fill_parent"
         android:layout_weight="0.22"
         android:gravity="center"
         android:text="55"
@@ -18,9 +18,10 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_weight="0.78"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/busLineButtonLayout">
 
         <Button
             android:id="@+id/topDepartureButton"
