--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -5,13 +5,11 @@
     android:layout_height="match_parent"
     android:useDefaultMargins="false"
     android:rowOrderPreserved="false"
-    android:nestedScrollingEnabled="false"
     android:columnOrderPreserved="false"
     android:rowCount="3"
     android:columnCount="3"
     android:longClickable="false"
     android:clickable="false"
-    android:transitionGroup="false"
     android:orientation="vertical">
 
     <TextView
@@ -24,12 +22,9 @@
         android:singleLine="false"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:layout_columnWeight="0"
-        android:layout_rowWeight="0"
         android:textColor="@android:color/black"
         android:fontFamily="@string/font"
         android:textAllCaps="true"
-        android:editable="false"
         android:inputType="none"
         android:gravity="center"
         android:minHeight="180sp"
@@ -50,8 +45,6 @@
         android:layout_rowSpan="3"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:layout_columnWeight="0"
-        android:layout_rowWeight="0"
         android:minHeight="700sp"
         android:minWidth="700sp"
         android:layout_gravity="center" />
@@ -61,7 +54,6 @@
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_rowSpan="3"
-        android:layout_columnWeight="0"
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:orientation="horizontal"
@@ -69,7 +61,6 @@
         android:rowCount="3"
         android:rowOrderPreserved="false"
         android:useDefaultMargins="false"
-        android:layout_rowWeight="0"
         android:gravity="center"
         android:layout_gravity="center">
 
@@ -85,11 +76,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="min"
+            android:text="@string/minutes"
             android:fontFamily="@string/font"
             android:textColor="@android:color/black"
             android:textSize="30sp"
-            android:password="false"
             android:gravity="center"
             android:layout_gravity="bottom"
             android:paddingBottom="14sp" />
@@ -101,28 +91,19 @@
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_columnWeight="0"
         android:layout_row="2"
         android:layout_rowSpan="1"
-        android:layout_rowWeight="0"
-        android:layout_margin="10dp"
-        android:gravity="left">
+        android:layout_margin="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="@string/charge"
-            android:layout_rowWeight="0"
-            android:layout_columnWeight="0"
-            android:layout_gravity="left"
             android:singleLine="false"
+            android:layout_gravity="start"
             android:textColor="@android:color/black"
             android:fontFamily="@string/font"
-            android:capitalize="none"
-            android:textAlignment="gravity"
-            android:autoText="false"
             android:textAllCaps="true"
-            android:editable="false"
             android:inputType="none"
             android:textSize="13sp" />
 
@@ -130,17 +111,10 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="125 kr"
-            android:layout_rowWeight="0"
-            android:layout_columnWeight="0"
-            android:layout_gravity="left"
+            android:layout_gravity="start"
             android:singleLine="true"
             android:textColor="@android:color/black"
             android:fontFamily="@string/font"
-            android:capitalize="none"
-            android:textAlignment="gravity"
-            android:autoText="false"
-            android:textAllCaps="true"
-            android:editable="false"
             android:textSize="23sp" />
 
     </LinearLayout>
@@ -151,26 +125,18 @@
         android:layout_height="wrap_content"
         android:layout_column="2"
         android:layout_columnSpan="1"
-        android:layout_columnWeight="0"
         android:layout_row="2"
         android:layout_rowSpan="1"
-        android:layout_rowWeight="0"
-        android:layout_margin="10dp"
-        android:gravity="right">
+        android:layout_margin="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="@string/latest"
-            android:layout_rowWeight="0"
-            android:layout_columnWeight="0"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:singleLine="false"
             android:textColor="@android:color/black"
             android:fontFamily="@string/font"
-            android:capitalize="characters"
-            android:textAlignment="gravity"
-            android:editable="false"
             android:textAllCaps="true"
             android:textSize="13sp" />
 
@@ -178,16 +144,10 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="Idag 10:04"
-            android:layout_rowWeight="0"
-            android:layout_columnWeight="0"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:singleLine="true"
             android:textColor="@android:color/black"
             android:fontFamily="@string/font"
-            android:capitalize="characters"
-            android:textAlignment="gravity"
-            android:editable="false"
-            android:textAllCaps="true"
             android:textSize="23sp" />
 
     </LinearLayout>
