--- a/app/src/main/res/layout/busline_row.xml
+++ b/app/src/main/res/layout/busline_row.xml
@@ -3,18 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:minHeight="90dp">
 
     <TextView
         android:id="@+id/busNumberTextView"
         android:layout_width="91dp"
         android:layout_height="fill_parent"
-        android:layout_weight="0.22"
         android:gravity="center"
         android:text="55"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="50dp"
-        android:textStyle="bold" />
+        android:textSize="30dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -23,18 +22,5 @@
         android:orientation="vertical"
         android:id="@+id/busLineButtonLayout">
 
-        <Button
-            android:id="@+id/topDepartureButton"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:text="New Button" />
-
-        <Button
-            android:id="@+id/bottomDepartureButton"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:text="New Button" />
     </LinearLayout>
 </LinearLayout>
