--- a/app/src/main/res/drawable/countdown_ring.xml
+++ b/app/src/main/res/drawable/countdown_ring.xml
@@ -2,6 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/secondaryProgress">
         <shape
+            android:useLevel="false"
             android:innerRadiusRatio="2.63"
             android:shape="ring"
             android:thicknessRatio="216">
@@ -19,6 +20,7 @@
             android:pivotY="50%"
             android:toDegrees="270">
             <shape
+                android:useLevel="true"
                 android:innerRadiusRatio="2.63"
                 android:shape="ring"
                 android:thicknessRatio="216">
