--- a/app/src/main/res/drawable-xxhdpi/ticket_button.xml
+++ b/app/src/main/res/drawable-xxhdpi/ticket_button.xml
@@ -4,8 +4,7 @@
         <shape
             android:useLevel="false"
             android:innerRadiusRatio="2.63"
-            android:shape="ring"
-            android:thicknessRatio="216">
+            android:shape="oval">
             <solid
                 android:color="@color/primary_color" />
         </shape>
